<resources>
    <string name="app_name">Run Studio</string>
    <string name="action_settings">Settings</string>
    <string name="genweidescr">This information will be used to correctly feed the sneakers, depending on your personal data, in order to select the most convenient boots.</string>
    <string name="title_activity_start_menu">StartMenu</string>
    <string name="start">START</string>
    <string name="next">Next</string>
    <string name="please_tell_about_yourself">Please, tell about yourself</string>
    <string name="chose_your">Chose your:</string>
    <string name="tap">tap</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="kg_pounds">units</string>
    <string name="value">value</string>
    <string name="apply">Apply</string>
    <string name="pronation">Pronation</string>
    <string name="pad">Padding????</string>
    <string name="ream">Ream Width</string>
    <string name="how_to_determine"><u>How to determine?</u></string>
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="home">HOME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hyperpronation">Hyperpronation</string>
    <string name="normal_pronation">Normal pronation</string>
    <string name="hypopronation">Hypopronation</string>
    <string name="narrow">Narrow</string>
    <string name="normal">Normal</string>
    <string name="wide">Wide</string>
</resources>
