<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReamWidth">

    <LinearLayout
        android:id="@+id/rwll3"
        android:layout_below="@+id/TellAbReam"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rbrtv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/wide" />

        <RadioButton
            android:id="@+id/rbr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rwll2"
        android:layout_below="@+id/TellAbReam"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rbrtv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/rbr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rwll1"
        android:layout_below="@+id/TellAbReam"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rbrtv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/narrow" />

        <RadioButton
            android:id="@+id/rbr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/colorPrimaryDark" />
    </LinearLayout>

    <TextView
        android:id="@+id/howto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_determine"
        android:layout_below="@+id/rwll1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/TellAbReam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/genweidescr"
        android:textColor="@color/colorTemnoSeriy"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/next3"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/next"
        android:layout_below="@+id/rwll3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="9dp"
        app:srcCompat="@drawable/strela" />

</RelativeLayout>