<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".GenderWeight">

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_below="@+id/linearLayout"
        android:background="@drawable/border"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/main_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/weight"
            android:textColor="@color/colorAccent"
            android:gravity="start"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/Value"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/TapToWeight"
            android:layout_toEndOf="@id/main_weight"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="110dp"
            android:backgroundTint="@android:color/transparent"
            android:ems="10"
            android:hint="@string/value"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textSize="30sp"
            tools:targetApi="o"
            android:textCursorDrawable="@color/colorAccent"/>

        <TextView
            android:id="@+id/TapToWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/tap"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_below="@+id/TellAb"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/main_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:text="@string/gender"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/TapToGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/tap"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/TellAb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/genweidescr"
        android:textColor="@color/colorTemnoSeriy"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/next1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/next"
        android:elevation="@dimen/activity_horizontal_margin"
        app:srcCompat="@drawable/strela" />
</RelativeLayout>